--- a/demo/index.html
+++ b/demo/index.html
@@ -9,16 +9,14 @@
   </head>
 
   <body>
-    <header>
-      <a target="_blank" href="https://github.com/hotjar/hotjar-js"> logo github </a>
-    </header>
+    <a id="github-link" target="_blank" href="https://github.com/hotjar/hotjar-js"><img src="images/logo_github.png" /></a>
     <div id="jumbotron">
       <h1>@hotjar/browser</h1>
-      <p>This package brings Hotjar to your application</p>
+      <p>Bring Hotjar directly to your application</p>
     </div>
 
     <div id="content">
-      <h2 id="installation">Installation</h2>
+      <h2>Installation</h2>
 
       <div class="row">
         <div class="left">
@@ -28,9 +26,11 @@
           <p>Check the following demo on how to use this library!</p>
         </div>
         <div class="right">
-          <pre class="prettyprint"><code>npm install -s @hotjar/browser
+<pre class="prettyprint">
+<code class="language-js"><span class="nocode">yarn add @hotjar/browser</span>
 
-import Hotjar from '@hotjar/browser'</code></pre>
+import Hotjar from '@hotjar/browser'
+</code></pre>
         </div>
       </div>
 
@@ -40,7 +40,7 @@ import Hotjar from '@hotjar/browser'</code></pre>
         <div class="left">
           <p>In order for Hotjar to run, it needs to be initialized with your site ID. You can find your site ID on <a href="https://insights.hotjar.com/site/list" target="_blank">this page</a> just before your site name.</a></p>
           <p>
-            You can click on the button to initialize Hotjar which will allow to use the rest of the features.
+            You can press the button to initialize Hotjar which will allow to use the rest of the features.
           </p>
 
           <button class="button" id="init-hotjar-button">Init Hotjar</button>
@@ -48,13 +48,44 @@ import Hotjar from '@hotjar/browser'</code></pre>
           <div class="alert alert-danger" id="init-hotjar-alert">Hotjar is not initialized</div>
         </div>
         <div class="right">
-          <pre class="prettyprint"><code>const siteID = 123;
+          <pre class="prettyprint"><code class="language-js">const siteId = 123;
 cont hotjarVersion = 6;
 
-Hotjar.init(siteID, hotjarVersion);
-          </code></pre>
+Hotjar.init(siteId, hotjarVersion);
+</code></pre>
+        </div>
+      </div>
+
+      <h2>Identify API</h2>
+
+      <div class="row">
+        <div class="left">
+          <p>One of the main interest of this library is to be able to use <a target="_blank" href="https://help.hotjar.com/hc/en-us/articles/360033640653-Identify-API-Reference">Hotjar Identify API</a>.</p>
+          <p>
+            You can fill the form to identify yourself with a name and favorite color.
+          </p>
+
+          <label for="identify-hotjar-name">Your first name</label><input id="identify-hotjar-name" type="text" placeholder="John" />
+          <label for="identify-hotjar-color">Your favorite color</label><input id="identify-hotjar-color" type="text" placeholder="blue" />
+
+          <button class="button" id="identify-hotjar-button" disabled>Identify</button>
+
+          <div class="alert alert-success hidden" id="identify-hotjar-alert">Identify sent!</div>
+        </div>
+        <div class="right">
+          <pre class="prettyprint"><code class="language-js">const userId = 999;
+const firstName = 'John';
+const favoriteColor = 'blue';
+
+
+Hotjar.identify(userId, {
+  first_name: firstName,
+  color: favoriteColor
+});
+</code></pre>
         </div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?skin=sunburst"></script>
   </body>
 </html>
