--- a/demo/index.html
+++ b/demo/index.html
@@ -87,6 +87,29 @@ Hotjar.identify(userId, {
         </div>
       </div>
 
+      <h2>Events API</h2>
+
+      <div class="row">
+        <div class="left">
+          <p>You can also track specific actions taken by your users and send that data to Hotjar via the <a target="_blank" href="https://help.hotjar.com/hc/en-us/articles/4405109971095-Events-API-Reference">Hotjar Events API</a>.</p>
+          <p>
+            You can press the button to generate an error and log an event so that you can filter your recordings by users who encountered an error during their session.
+          </p>
+
+          <form id="events-form">
+            <label for="events-hotjar-email">Your email</label>
+            <input id="events-hotjar-email" type="email" placeholder="john@example.com" />
+            <button class="button" id="events-hotjar-button" type="submit" disabled>Subscribe</button>
+          </form>
+
+          <div class="alert alert-danger hidden" id="events-hotjar-alert"></div>
+        </div>
+        <div class="right">
+          <pre class="prettyprint"><code class="language-js">const actionName = 'subscribed';
+Hotjar.event(actionName);</code></pre>
+        </div>
+      </div>
+
       <h2>Manual URL changes</h2>
 
       <div class="row">
