ATV-1154: Tweaks to example and a few typo fixes.

--- a/demo/index.html
+++ b/demo/index.html
@@ -93,7 +93,7 @@ Hotjar.identify(userId, {
         <div class="left">
           <p>You can also track specific actions taken by your users and send that data to Hotjar via the <a target="_blank" href="https://help.hotjar.com/hc/en-us/articles/4405109971095-Events-API-Reference">Hotjar Events API</a>.</p>
           <p>
-            You can press the button to generate an error and log an event so that you can filter your recordings by users who encountered an error during their session.
+            You can press the button to generate an event, you can then filter your Recordings by users who encountered that event during their session.
           </p>
 
           <form id="events-form">
