--- a/demo/index.html
+++ b/demo/index.html
@@ -52,6 +52,11 @@ import Hotjar from '@hotjar/browser'
 const hotjarVersion = 6;
 
 Hotjar.init(siteId, hotjarVersion);
+
+// Initializing with `debug` option:
+Hotjar.init(siteId, hotjarVersion, {
+  debug: true
+});
 </code></pre>
         </div>
       </div>
